--- a/开发经验.md
+++ b/开发经验.md
@@ -1,2 +1,13 @@
 # 开发经验
 
+
+#### 1. ListView中EditText光标，键盘与滑动时记住内容
+
+为EditText设置TextWatcher
+
+#### 2. RecyclerView用Fesco，glide加载图片时闪烁
+设置tag
+
+注意不要宽高都设置为wrap_content
+
+#### 3. 
