Creates assets/Android-sp.png
Auto commit by GitBook Editor

--- a/面试题目总结.md
+++ b/面试题目总结.md
@@ -1,2 +1,8 @@
-# 面试题目总结
+# Android基本知识点
+
+汇总比较基础的知识，也会引申到一些面试中常见的问题。
+
+之前遇到过一些这样的问题，有的细节和处理方式是你很久之前用过的，记忆不深刻了或者随着api版本更新，表现形式已经发生了变化，这些问题就会回答不好，还是在使用时和使用后没有复习归类，平时只是api的调用，面试问题就会综合实际情况讨论，是深度的挖掘和横向的对比，如果平时没注意联想总结，面试没有转备好，当场又没有临场发挥好的话，悲剧的概率就趋近于1了。
+
+且行且珍惜。
 
