--- a/面试那些事/其他相关问题.md
+++ b/面试那些事/其他相关问题.md
@@ -1,4 +1,9 @@
 1. json解析的原理
-
+2. binder机制以及描述一次跨进程调用
+3. 阿里发布的android开发规范手册
+4. java类加载机制、时机、过程
+5. HashMap的原理，内部机制。红黑树，扩容，存取，equals
+6. 平衡二叉树，B树，红黑树
+7. 
 
 
