--- a/面试那些事/其他相关问题.md
+++ b/面试那些事/其他相关问题.md
@@ -4,6 +4,21 @@
 4. java类加载机制、时机、过程
 5. HashMap的原理，内部机制。红黑树，扩容，存取，equals
 6. 平衡二叉树，B树，红黑树
-7. 
+7. 线程种类，同步方式和各种锁，重入锁是什么
 
+8. java泛型擦除阶段、动态分派静态分派、语法糖
+
+9. glide中的磁盘缓存和内存缓存有什么黑科技提高性能的。IO和内存上。
+
+常用算法：
+
+1.快排、堆排序为首的各种排序算法
+
+2.链表的各种操作：判断成环、判断相交、合并链表、倒数K个节点、寻找成环节点
+
+3.二叉树、红黑树、B树定义以及时间复杂度计算方式
+
+4.动态规划、贪心算法、简单的图论
+
+5.之前被考过的算法。推荐书籍：**算法导论**，将图论之前的例子写一遍
 
