--- a/面试那些事/其他相关问题.md
+++ b/面试那些事/其他相关问题.md
@@ -24,9 +24,9 @@
 
 5.之前被考过的算法。推荐书籍：**算法导论**，将图论之前的例子写一遍
 
-6.打印n-m之间所有的素数；计算n-m之间1出现的次数；指定数字序列的排序；
+6.打印n-m之间所有的素数；计算n-m之间1出现的次数；指定数字序列的排序。
 
-7. 镜像二叉树；用两个栈实现队列。
+7.镜像二叉树；用两个栈实现队列。
 
 算法练习：
 
