--- a/面试那些事/相关其他面试总结.md
+++ b/面试那些事/相关其他面试总结.md
@@ -1,6 +1,6 @@
-# [近期参加的各大公司面试总结](http://blog.csdn.net/qq_23547831/article/details/52343837)
+转的一些问题，觉得也被问到过，mark一下，原链接没有答案，问题比较有代表性索性直接拿过来。
 
-转的一些问题，觉得也被问到过，mark一下，原链接没有答案，这里可能会汇总一些。
+#### [近期参加的各大公司面试总结](http://blog.csdn.net/qq_23547831/article/details/52343837)
 
 * 聊一聊protobuf是如何使用的？使用protobuf作为网络传输格式有哪些优势？
 
@@ -142,5 +142,5 @@
 
 还有一些问题记得不是特别清楚了，这里面有一些大公司：百度，360，网易，乐视，小米，知乎等等，当然也有一些小公司创业公司等。由于这次想去个大一些的公司，所以主要针对大公司做了一些复习，这里不得不说，想去大公司面试的童鞋一定要看一下数据结构和算法。比如常见的数据结构：数组，链表，栈，队列，二叉树等等；常见的排序算法也要知道几种，以及他们各自的时间负责度和空间复杂度。
 
-这个挺长的，有一些简单的回答和解释，具体就不贴了：[Android大厂面试题锦集附答案\(BAT TMD JD 小米\)](http://www.apkbus.com/blog-689174-77010.html)
+这个挺长的，有一些简单的回答和解释，虽然是校招，问题比较全面，具体就不贴了：[Android大厂面试题锦集附答案\(BAT TMD JD 小米\)](http://www.apkbus.com/blog-689174-77010.html)
 
