--- a/面试那些事/其他相关问题.md
+++ b/面试那些事/其他相关问题.md
@@ -1,3 +1,5 @@
+##### 一些可能的冷门问题
+
 1. json解析的原理
 2. binder机制以及描述一次跨进程调用
 3. 阿里发布的android开发规范手册
@@ -12,7 +14,7 @@
 
 10. okio，retrofit，rxjava，了解一下
 
-常用算法：
+##### 常用算法：
 
 1.快排、堆排序为首的各种排序算法
 
@@ -28,7 +30,21 @@
 
 7.镜像二叉树；用两个栈实现队列。
 
-常被问到的开放性问题：
+##### 常被问到的开放性问题：
+
+除了简历上的，还做过哪些？还擅长什么方面？
+
+现场抛出一个问题问解决方案的：比如设计一个图片缓存系统，为了加快启动速度的延迟加载框架，一个动画自定义view的实现思路，结合具体项目的优化问题
+
+自己的职业规划是什么，技术规划呢
+
+之前的工作经历有哪些对你影响最大，学会了什么？
+
+非计算机专业的会问到工作过程中用到你的专业知识了么，解决了什么问题
+
+平时的兴趣爱好学习方式和渠道，目前android最新版本的特性啦之类的
+
+对自己的评价相关的
 
 
 
