--- a/面试那些事/其他相关问题.md
+++ b/面试那些事/其他相关问题.md
@@ -46,5 +46,23 @@
 
 对自己的评价相关的
 
+**最后赠送鸡汤：**
 
+0. android精通，ndk+前端？
+
+1. 混合开发Reactive：ios+android
+
+2. 后台开发：业务开发
+
+3. 数据方向？？不是太了解
+
+4. 开发测试方向：脚本+工具
+
+5. 算法相关：c++，python等算法？什么细分？
+
+6. 其他：管理、培训、其他跨行业
+
+你要的发展规划：[http://blog.jobbole.com/899/](http://blog.jobbole.com/899/)
+
+建议加鸡汤：[面试感悟----一名3年工作经验的程序员应该具备的技能](http://www.cnblogs.com/xrq730/p/5260294.html)
 
